--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":[],"fileToBeOpened":"sorting-products/README.md"}
+{"ignoredFilesOrFolders":[],"openFiles":["sorting-products/README.md","sorting-products/.git/logs/HEAD","sorting-products/.git/logs/refs/remotes/origin/main","sorting-products/.git/refs/heads/main","sorting-products/.git/refs/remotes/origin/main","sorting-products/.git/config","sorting-products/.git/description"],"fileToBeOpened":"sorting-products/.git/HEAD"}
